--- a/RecipesProject/Base.lproj/Main.storyboard
+++ b/RecipesProject/Base.lproj/Main.storyboard
@@ -99,39 +99,21 @@
                     <tabBarItem key="tabBarItem" title="Item 2" id="4DS-KP-qME"/>
                     <toolbarItems>
                         <barButtonItem title="LOG OUT" image="arrowshape.turn.up.left.2.fill" catalog="system" style="plain" id="ZxN-z9-wSH">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ftq-a1-t5M">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ftq-a1-t5M">
                                 <rect key="frame" x="16" y="10" width="358" height="34.333333333333336"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                             </button>
-                            <connections>
-                                <action selector="barButtonPressed:" destination="bhC-pQ-FSl" id="Wul-aX-JWU"/>
-                            </connections>
                         </barButtonItem>
                     </toolbarItems>
+                    <navigationItem key="navigationItem" id="hBM-2M-Vc2"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FuP-kG-oMN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="7NB-N8-I0o" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2483.0769230769229" y="738.62559241706163"/>
-        </scene>
-        <!--Мои рецепты-->
-        <scene sceneID="oOt-cO-XCD">
-            <objects>
-                <viewController storyboardIdentifier="RecipesViewController" id="bhC-pQ-FSl" customClass="RecipesViewController" customModule="RecipesProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Lie-n3-Wro">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="a3h-oR-nlM"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Мои рецепты" id="VVS-kq-3Ie"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zfb-S9-t89" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1338" y="739"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="rcZ-8w-nOn">
@@ -154,23 +136,96 @@
         <!--Item 1-->
         <scene sceneID="4Ga-us-Rwh">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RwE-sZ-vrb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UrV-wU-ElA" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="UrV-wU-ElA" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item 1" id="xGL-lY-F8J"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="s87-DP-0Wa">
-                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="bhC-pQ-FSl" kind="relationship" relationship="rootViewController" id="Nmh-yI-KTq"/>
+                        <segue destination="mf2-0e-vYH" kind="relationship" relationship="rootViewController" id="1yg-QD-OpS"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RwE-sZ-vrb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="436.92307692307691" y="738.62559241706163"/>
         </scene>
+        <!--Recipes Table View Controller-->
+        <scene sceneID="rgB-tl-geK">
+            <objects>
+                <tableViewController id="mf2-0e-vYH" customClass="RecipesTableViewController" customModule="RecipesProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="qTQ-VL-3Js">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="88" id="glL-Bb-tZ0" customClass="RecipesTableViewCell" customModule="RecipesProject" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="390" height="88"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="glL-Bb-tZ0" id="shP-eW-XXe">
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="88"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pun-BW-e2D">
+                                            <rect key="frame" x="16.000000000000007" y="1" width="99.666666666666686" height="86"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="99.670000000000002" id="bAf-7N-A5R"/>
+                                                <constraint firstAttribute="height" constant="86" id="d6J-dD-GtT"/>
+                                            </constraints>
+                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="f18-yL-0Qy">
+                                            <rect key="frame" x="125.66666666666667" y="19.666666666666668" width="228.33333333333331" height="48.666666666666657"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hin-LL-LE3">
+                                                    <rect key="frame" x="93.666666666666671" y="0.0" width="41.333333333333329" height="20.333333333333332"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1bF-25-OwF">
+                                                    <rect key="frame" x="93.666666666666671" y="28.333333333333336" width="41.333333333333329" height="20.333333333333336"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Pun-BW-e2D" firstAttribute="centerY" secondItem="shP-eW-XXe" secondAttribute="centerY" id="2se-fV-o62"/>
+                                        <constraint firstItem="Pun-BW-e2D" firstAttribute="leading" secondItem="shP-eW-XXe" secondAttribute="leading" constant="16" id="E1r-Kg-Zj8"/>
+                                        <constraint firstItem="Pun-BW-e2D" firstAttribute="leading" secondItem="shP-eW-XXe" secondAttribute="leading" constant="16" id="P8V-zG-Bdh"/>
+                                        <constraint firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="f18-yL-0Qy" secondAttribute="trailing" constant="16" id="dqo-9T-2Dt"/>
+                                        <constraint firstItem="f18-yL-0Qy" firstAttribute="centerY" secondItem="Pun-BW-e2D" secondAttribute="centerY" id="pzk-fM-v43"/>
+                                        <constraint firstItem="f18-yL-0Qy" firstAttribute="leading" secondItem="Pun-BW-e2D" secondAttribute="trailing" constant="10" id="vl3-Q5-3hz"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="1bF-25-OwF" id="4aR-PJ-a1a"/>
+                                    <outlet property="imageIV" destination="Pun-BW-e2D" id="F2r-HL-1be"/>
+                                    <outlet property="titleLabel" destination="Hin-LL-LE3" id="CVY-RI-bFP"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="mf2-0e-vYH" id="A4e-lw-WlF"/>
+                            <outlet property="delegate" destination="mf2-0e-vYH" id="3fq-ie-nOo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="o8n-gD-wuU"/>
+                    <connections>
+                        <segue destination="iH4-tV-iOT" kind="show" identifier="siteSegue" id="Eky-Ij-0d8"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IA1-ya-6l8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1432" y="739"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Eky-Ij-0d8"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="arrowshape.turn.up.left.2.fill" catalog="system" width="128" height="86"/>
         <systemColor name="systemBackgroundColor">
